--- a/lib/boxing_web/live/leaderboard_live/index.html.heex
+++ b/lib/boxing_web/live/leaderboard_live/index.html.heex
@@ -11,6 +11,7 @@
       I thought I'd put that to the test by gamifying a comparison between the two. Here are the results so far:
     </p>
   </div>
+
   <div class="grid grid-cols-2 gap-12 mx-auto mt-12">
     <%= for vote <- @votes do %>
       <div class="text-center">
@@ -31,6 +32,14 @@
         <p class="text-6xl mt-4"><%= vote.count %> 🏆</p>
       </div>
     <% end %>
+  </div>
+  <div class="grid grid-cols-2 mt-4">
+    <div class="mx-auto text-center">
+      <%= @llama_plot %>
+    </div>
+    <div class="mx-auto text-center">
+      <%= @gpt_plot %>
+    </div>
   </div>
   <div class="mt-12 prose">
     <h1>How it works</h1>
