--- a/lib/boxing_web/components/layouts/app.html.heex
+++ b/lib/boxing_web/components/layouts/app.html.heex
@@ -10,7 +10,10 @@
         class="pr-6"
         href="https://replicate.com/replicate/llama70b-v2-chat?utm_campaign=llmboxing&utm_source=project"
       >
-        Run Llama Yourself
+        Run Llama
+      </a>
+      <a class="pr-6" href="https://github.com/cbh123/llmboxing">
+        See Code
       </a>
       <a href="/leaderboard">
         Results
