--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -210,7 +210,7 @@
             <div>
               <.link href="https://replicate.com/replicate/llama70b-v2-chat?utm_campaign=llmboxing&utm_source=project">
                 <.button>
-                  Are you a developer? Run Llama2 Replicate &rarr;
+                  Are you a developer? Run Llama2 on Replicate &rarr;
                 </.button>
               </.link>
             </div>
