--- a/lib/boxing_web/live/quiz_live/image.html.heex
+++ b/lib/boxing_web/live/quiz_live/image.html.heex
@@ -168,9 +168,9 @@
           <div class="mt-12 grid grid-cols-2 gap-4">
             <.button id="CopyClipboard" phx-hook="CopyToClipboard">Copy Emoji Scoreboard</.button>
             <div>
-              <.link href="https://replicate.com/replicate/llama70b-v2-chat?utm_campaign=llmboxing&utm_source=project">
+              <.link href="https://replicate.com/stability-ai/sdxl?utm_campaign=llmboxing&utm_source=project">
                 <.button>
-                  Are you a developer? Run Llama2 on Replicate &rarr;
+                  Run SDXL on Replicate &rarr;
                 </.button>
               </.link>
             </div>
