--- a/lib/boxing_web/live/prompt_live/index.html.heex
+++ b/lib/boxing_web/live/prompt_live/index.html.heex
@@ -2,10 +2,7 @@
   Listing Prompts
 </.header>
 
-<.table
-  id="prompt"
-  rows={@streams.prompt_collection}
->
+<.table id="prompt" rows={@streams.prompt_collection}>
   <:col :let={{_id, prompt}} label="Completion"><%= prompt.prompt %></:col>
   <:col :let={{_id, prompt}} label="Completion"><%= prompt.completion %></:col>
   <:col :let={{_id, prompt}} label="Model"><%= prompt.model %></:col>
