--- a/lib/boxing_web/live/prompt_live/index.html.heex
+++ b/lib/boxing_web/live/prompt_live/index.html.heex
@@ -2,6 +2,8 @@
   Listing Prompts
 </.header>
 
+<.button phx-click="run-mj">Run</.button>
+
 <.table id="prompt" rows={@streams.prompt_collection}>
   <:col :let={{_id, prompt}} label="Completion"><%= prompt.prompt %></:col>
   <:col :let={{_id, prompt}} label="Completion"><%= prompt.completion %></:col>
