--- a/lib/boxing_web/components/layouts/root.html.heex
+++ b/lib/boxing_web/components/layouts/root.html.heex
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="LLM Boxing • Choose your Champion" />
     <meta name="twitter:description" content="Language Model Face Off" />
-    <meta property="twitter:image" content={~p"/images/stats.png"} />
+    <meta property="twitter:image" content={~p"/images/llama-mistral-stats.png"} />
     <meta property="og:type" content="image" />
     <meta property="og:image" content={~p"/images/llama-mistral-stats.png"} />
     <meta property="og:url" content="https://llmboxing.com" />
